# Dot

./: .gitignore  .gitmodules  CMakeLists.txt  Circle.lua  Circle2.lua  DistanceField.lua  Dither.lua  Line.lua  Perlin.lua  README.md  Samples.lua  Test.lua  dither.lua
include/: perlin.h
resources/scripts/: dot_dither.lua  dot_math.lua  dot_perlin.lua  math.lua
src/: common.h  controller.cpp  controller.h  display.h  dot.h  editor_view.cpp  editor_view.h  interpreter.cpp  interpreter.h  main.cpp  main_cli.cpp  main_view.h  perlin.cpp  view.h  window.cpp  window.h
src/_old/: perlin.cpp
src/_to_be_refactored/: perlin.h
